tests/toy/neg/001418_mutation.toylang
program a = { var a : do int; } .
